--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
   <section class="hero">
-    <img src="C:\Users\junior\OneDrive\Desktop\WABS\IMG_3495.PNG" alt="Business Logo" class="hero-logo">
+    <img src="IMG_3495.PNG" alt="Business Logo" class="hero-logo">
     <h1>Convenient Handyman & Transport Services</h1>
     <p>From fixing your home to taking you home, trust us to get the job done right, on time, and with care.</p>
     <div class="hero-buttons">
