--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
       <a href="tel:+18573087353">Call Now</a>
     </div>
     <div class="hero-icons">
-      <img src="C:\Users\junior\OneDrive\Desktop\WABS\6178287 (1).png" alt="Handyman Icon">
-      <img src="C:\Users\junior\OneDrive\Desktop\WABS\8641796.png" alt="Van Icon">
+      <img src="6178287 (1).png" alt="Handyman Icon">
+      <img src="8641796.png" alt="Van Icon">
     </div>
   </section>
 </body>
@@ -129,14 +129,14 @@
   <section class="about-section">
     <div class="container">
       <div class="about-header">
-        <img src="C:\Users\junior\OneDrive\Desktop\WABS\man.PNG" alt="WABS" class="logo">
+        <img src="man.PNG" alt="WABS" class="logo">
         <h2>About Us</h2>
         <p>We’re your one-stop solution for professional handyman services and reliable transportation solutions.</p>
 <br>
 <br>
 <br>
      <h3>CHAUFFEUR</h3>     
-<p> <img src="C:\Users\junior\OneDrive\Desktop\WABS\figure_trajet_mise-dispo-672x372.webp"> </p>
+<p> <img src="figure_trajet_mise-dispo-672x372.webp"> </p>
 </head>
        </div>
 
@@ -360,7 +360,7 @@
 
 <section class="why-choose-us">
   <div class="logo">
-    <img src="C:\Users\junior\OneDrive\Desktop\WABS\IMG_3495.PNG" alt="Business Logo">
+    <img src="IMG_3495.PNG" alt="Business Logo">
   </div>
   <h2>Why Choose Us</h2>
 
@@ -500,7 +500,7 @@
 <section class="form-section">
   <div class="form-container">
     <div class="form-header">
-      <img src="C:\Users\junior\OneDrive\Desktop\WABS\IMG_3495.PNG" alt="Company Logo">
+      <img src="IMG_3495.PNG" alt="Company Logo">
       <h2>Request a Free Quote</h2>
     </div>
 
@@ -547,7 +547,7 @@
   <div class="footer-container">
     <!-- Logo & Tagline -->
     <div class="footer-logo">
-      <img src="C:\Users\junior\OneDrive\Desktop\WABS\IMG_3495.PNG" alt="Business Logo" class="logo">
+      <img src="IMG_3495.PNG" alt="Business Logo" class="logo">
       <p>Reliable Handyman & Transportation Services</p>
     </div>
 
